--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>{% block title %} {% endblock title %} Orawel</title>
+     <!-- Google Fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&family=Montserrat:ital,wght@1,300&family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
+     <style>
+      *{
+        font-family: 'Inconsolata', monospace;
+/* font-family: 'Montserrat', sans-serif; */
+/* font-family: 'Zilla Slab', serif; */
+      }
+     </style>
 </head>
 
 <body>
@@ -33,17 +42,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/services">Services</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Register
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Login</a>
-                        <a class="dropdown-item" href="#">SignUp</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Membership Plans</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login/SignUp</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact Us</a>
@@ -58,6 +58,18 @@
 
 
     </nav>
+
+{% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0 " role="alert">
+       <i>   <strong>     {{ message }} </strong> </i>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+    {% endfor %}
+{% endif %}
+
     {% block body %} {% endblock body %}
 
     <!--FOOTER -->
