loginpage front end added

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>{% block title %} {% endblock title %} Orawel</title>
+    <title>{% block title %} {% endblock title %} Orawell</title>
      <!-- Google Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&family=Montserrat:ital,wght@1,300&family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
-     <style>
+     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@200&display=swap" rel="stylesheet">     <style>
       *{
-        font-family: 'Inconsolata', monospace;
+        font-family: 'Merriweather', serif;
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'Zilla Slab', serif; */
       }
@@ -25,7 +24,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-        <a class="navbar-brand" href="#">Orawel</a>
+        <a class="navbar-brand" href="#">ORAWELL</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,19 +33,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/about">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services">Services</a>
+                    <a class="nav-link" href="/services">TREATMENTS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login/SignUp</a>
+                    <a class="nav-link" href="/login">LOGIN</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact Us</a>
+                    <a class="nav-link" href="/contact">CONTACT US</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -85,10 +84,10 @@
                 <div class="col-md-4 mx-auto">
 
                     <!-- Content -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Orawel Dental.</h5>
-                    <p>Orawel Dental is the largest network of dental clinics in India. Since inception in 2011, we have
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">ORAWELL DENTAL.</h5>
+                    <p>Orawell Dental is the largest network of dental clinics in India. Since inception in 2011, we have
                         been persistent in our tunnel vision and ardently strive to offer global standards of dentistry
-                        in every neighbourhood across the subcontinent. Spread across 350+ clinics Orawel manages an
+                        in every neighbourhood across the subcontinent. Spread across 350+ clinics Orawell manages an
                         excess of 30,000 patients every month. In addition, we have conducted about 15 lakh treatments
                         in the last eight years.</p>
 
@@ -144,7 +143,7 @@
                             <a href="#!" style="color: black">Mission And Vision</a>
                         </li>
                         <li>
-                            <a href="#!" style="color: black">Orawel Promise</a>
+                            <a href="#!" style="color: black">Orawell Promise</a>
                         </li>
                         <li>
                             <a href="#!" style="color: black">Board Of Directors</a>
@@ -172,7 +171,7 @@
                 <div class="col-md-2 mx-auto">
 
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Orawel Advantages</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Orawell Advantages</h5>
 
                     <ul class="list-unstyled">
                         <li>
@@ -245,7 +244,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#" style="color:darkgreen;"> Orawel.com</a>
+            <a href="#" style="color:darkgreen;"> Orawell.com</a>
         </div>
         <!-- Copyright -->
 
