--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <b><h1>Register for Free</h1></b>
     <section class="jumbotron text-center bg-dark">
         <div class="container">
-          <h1 style="color: white;">Welcome to Orawel Dental</h1>
+          <h1 style="color: white;">Welcome to Orawell Dental</h1>
           <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
           <p>
             <a href="#" class="btn btn-primary my-2">Login</a>
