--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <form class="form-signin" method="post" action="/login">
     {% csrf_token %}
         <img class="mb-4" src="static/loginlogo.jfif" alt="" width="72" height="72">
-      <i>   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> </i>
+       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Username</label>
         <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Password</label>
