--- a/templates/base.html
+++ b/templates/base.html
@@ -10,36 +10,32 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>{% block title %} {% endblock title %} Orawell</title>
-     <!-- Google Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@200&display=swap" rel="stylesheet">     <style>
-      *{
-        font-family: 'Merriweather', serif;
-/* font-family: 'Montserrat', sans-serif; */
-/* font-family: 'Zilla Slab', serif; */
-      }
+     <link rel="stylesheet" href="base.css">
      </style>
 </head>
 
 <body>
     <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header>
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            
         <a class="navbar-brand" href="#">ORAWELL</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"> HOME<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services">TREATMENTS</a>
+                    <a class="nav-link" href="/treatments">TREATMENTS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">LOGIN</a>
@@ -53,24 +49,25 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
-
-
-
+        
+        
+        
     </nav>
-
-{% if messages %}
+</header>
+    
+    {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0 " role="alert">
-       <i>   <strong>     {{ message }} </strong> </i>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+        <i>   <strong>     {{ message }} </strong> </i>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     {% endfor %}
-{% endif %}
-
+    {% endif %}
+    
     {% block body %} {% endblock body %}
-
+    
     <!--FOOTER -->
     <footer class="page-footer font-small stylish-color-dark pt-4">
 
