--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block body %} 
 
 <div class="container text-center py-4" style="margin:auto; max-width: 330px;" >
-    <form class="form-signin" method="post" action="/login">
+    <form class="form-signin" method="post" action="login">
     {% csrf_token %}
         <img class="mb-4" src="static/loginlogo.jfif" alt="" width="72" height="72">
        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
