--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">CONTACT US</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/treatments">FIND CLINICS</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
