--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
     <!--NAVBAR-->
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class=" navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd; margin: 10px; border-radius: 13px;">
             
-        <a class="navbar-brand" href="#">ORAWELL</a>
+        <a class="navbar-brand" href="#">Orawell</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,10 +41,13 @@
                     <a class="nav-link" href="/login">LOGIN</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/signup">SIGN UP</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/contact">CONTACT US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/treatments">FIND CLINICS</a>
+                    <a class="nav-link" href="/findclinics">FIND CLINICS</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
