--- a/templates/loggedpage.html
+++ b/templates/loggedpage.html
@@ -1,11 +1,296 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>logged</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <title>{% block title %} {% endblock title %} Orawell</title>
+     
+     </style>
 </head>
-<body>
-    <a href="/login">logout</a>
+
+<body onload="getLocation()">
+    <!--NAVBAR-->
+    <header>
+
+        <nav class=" navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd; margin: 10px; border-radius: 13px;">
+            
+        <a class="navbar-brand" href="#">Orawell</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> HOME<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/treatments">TREATMENTS</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/login">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup">SIGN UP</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">CONTACT US</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/findclinics">FIND CLINICS</a>
+                </li> -->
+
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0 mx-2 " type="submit">Search</button>
+
+                <a  href="/login" style="color: black;" > <svg width="3em" height="2em" viewBox="0 0 16 16" class="bi bi-door-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2v13h1V2.5a.5.5 0 0 0-.5-.5H11zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
+                  </svg></a> 
+                <a href="#"" style="color: black;">
+                <svg width="3em" height="2em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                  </svg></a>
+            </form>
+        </div>      
+    </nav>
+</header>
+
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0 " role="alert">
+        <i>   <strong>     {{ message }} </strong> </i>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    
+    {% block body %} {% endblock body %}
+
+
+    <!-- Main Content -->
+   
+    <!--FOOTER -->
+    <footer class="page-footer font-small stylish-color-dark pt-4">
+
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left">
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-4 mx-auto">
+
+                    <!-- Content -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">ORAWELL DENTAL.</h5>
+                    <p>Orawell Dental is the largest network of dental clinics in India. Since inception in 2011, we have
+                        been persistent in our tunnel vision and ardently strive to offer global standards of dentistry
+                        in every neighbourhood across the subcontinent. Spread across 350+ clinics Orawell manages an
+                        excess of 30,000 patients every month. In addition, we have conducted about 15 lakh treatments
+                        in the last eight years.</p>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-2 mx-auto">
+
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Call Us</h5>
+
+                    <ul class="list-unstyled" style="padding-top: 3px; color: black">
+                        <li>
+                            <a href="#!" style="color: black">Delhi-9194821940</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Haryana-7483748413</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Gujrat-47812785478</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Madhya Pradesh-9482374823</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Uttrakhand-6482374823</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Karnatka-6482374823</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Bangalore-6482374823</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-2 mx-auto">
+
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">About Us</h5>
+
+                    <ul class="list-unstyled" style="padding-top: 3px;">
+                        <li>
+                            <a href="#!" style="color: black">Mission And Vision</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Orawell Promise</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Board Of Directors</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Gallery</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Outreach Program</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Awards And Recognition</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Contact Us</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-2 mx-auto">
+
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Orawell Advantages</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" style="color: black">Online Payments</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Patient Feedback</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Career Path</a>
+                        </li>
+                        <li>
+                            <a href="#!" style="color: black">Patient Testimonials</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <hr>
+
+        <!-- Call to action -->
+        <ul class="list-unstyled list-inline text-center py-2">
+            <li class="list-inline-item">
+                <h5 class="mb-1">Register for free</h5>
+            </li>
+            <li class="list-inline-item">
+                <a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
+            </li>
+        </ul>
+        <!-- Call to action -->
+
+        <hr>
+
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+                <a class="btn-floating btn-fb mx-1">
+                    <i class="fab fa-facebook-f"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-tw mx-1">
+                    <i class="fab fa-twitter"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-gplus mx-1">
+                    <i class="fab fa-google-plus-g"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-li mx-1">
+                    <i class="fab fa-linkedin-in"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn-floating btn-dribbble mx-1">
+                    <i class="fab fa-dribbble"> </i>
+                </a>
+            </li>
+        </ul>
+        <!-- Social buttons -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="#" style="color:darkgreen;"> Orawell.com</a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    {% block footer %} {% endblock footer %}
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+<!-- Golocation API -->
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"> </script>
+<script>
+    function getLocation(){
+        if(navigator.geolocation){
+         navigator.geolocation.getCurrentPosition(showPosition);
+        }
+        else{
+  x.innerHTML = "Browser not supporting"
+        }
+    }
+    function showPosition(position){
+        console.log("Latitude = "+position.coords.latitude)
+        console.log("Longitude = "+position.coords.longitude)
+    }
+</script>
