--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,86 +1,40 @@
- {% extends 'base.html' %}
-{% block body %}
-<div class="container">
-  <form action="signup" method="post">
+   {% extends 'base.html' %}
+   {% block body %}
+<div class="container  py-4" style="margin:auto; max-width: 500px;" >
+    <form class="form-signin" method="post" action="signup">
     {% csrf_token %}
-    <div class="col-md-8 order-md-1">
-      <h4 class="mb-3" style="color: rgb(44, 39, 82);">SignUp for new Account</h4>
-        <form class="needs-validation" novalidate=""> 
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <label for="firstName">First name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required="" name="firstName">
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="lastName">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required="" name="lastName">
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>
-          </div>
-  
-          <div class="mb-3">
-            <label for="username">Username</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text">@</span>
-              </div>
-              <input type="text" class="form-control" id="username" placeholder="Username" required="" name="username">
-              <div class="invalid-feedback" style="width: 100%;">
-                Your username is required.
-              </div>
-            </div>
-          </div>
-  
-          <div class="mb-3">
-            <label for="email">Email </label>
-            <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email">
-            <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
-            </div>
-          </div>
+        <img class="mb-4" src="static/loginlogo.jfif" alt="" width="72" height="72">
+       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+       <label>First name</label>
+        <label for="inputfirstName" class="sr-only">First Name</label>
+        <input type="text" id="inputfirstName" name="firstName" class="form-control" placeholder="" required="" autofocus="">
 
-          <div class="mb-3">
-            <label for="phone">Phone Number</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text">+91</span>
-              </div>
-              <input type="tel" class="form-control" id="phone" placeholder="Phone Number" required="" name="phone">
-              <div class="invalid-feedback" style="width: 100%;">
-                Your Phone Number is required.
-              </div>
-            </div>
-          </div>
+       <label>Last name</label>
+        <label for="inputlaststName" class="sr-only">Last Name</label>
+        <input type="text" id="inputlastName" name="lastName" class="form-control" placeholder="" required="" autofocus="">
 
-          <div class="mb-3">
-            <label for="pass1">Choose your password </label>
-            <input type="password" class="form-control" id="pass1" placeholder="password should contain atleast 8 letters" name="pass1">
-            <div class="invalid-feedback">
-              Please enter a valid Password.
-            </div>
-          </div>
-          
-          <div class="mb-3">
-            <label for="pass2">Type your password Again</label>
-            <input type="password" class="form-control" id="pass2" name="pass2" >
-            <div class="invalid-feedback">
-              Please enter a valid Password.
-            </div>
-          </div>
-          <div class="mb-3">
+       <label>Email Id</label>
+        <label for="inputEmail" class="sr-only">Email</label>
+        <input type="text" id="inputEmail" name="username" class="form-control" placeholder="eg. email@orawell.com" required="" autofocus="">
 
-          </div>
-          <hr class="mb-4">
-          <button class="btn btn-success btn-lg btn-block" type="submit">Sign Up</button>
-      </div>
-        </form>
-    </div>
- </form> 
-    {% endblock body %} 
- 
-  
+       <label>Choose your password</label> 
+       <label for="inputPassword" class="sr-only">password 1</label>
+        <input type="password" name="pass1" id="inputPassword" class="form-control" placeholder="" required="">
+
+       <label>Type your password Again</label>
+        <label for="inputPassword" class="sr-only">Password 2</label>
+        <input type="password" name="pass2" id="inputPassword" class="form-control" placeholder="" required="">
+
+       <label>Phone Number</label>
+        <label for="inputphone" class="sr-only">Phone</label>
+        <input type="tel" name="phone" id="inputphone" class="form-control" placeholder="" required="">
+
+        <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+</div>
+   {% endblock body %}
