--- a/templates/loggedpage.html
+++ b/templates/loggedpage.html
@@ -37,27 +37,33 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/treatments">TREATMENTS</a>
                 </li>
-                <!-- <li class="nav-item">
+                {% if not request.user.is_authenticated %}
+                <li class="nav-item">
                     <a class="nav-link" href="/login">LOGIN</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signup">SIGN UP</a>
-                </li> -->
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="/" class="nav-link">LOGOUT</a>
+                </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">CONTACT US</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/findclinics">FIND CLINICS</a>
                 </li> -->
-
+               
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0 mx-2 " type="submit">Search</button>
 
-                <a  href="/login" style="color: black;" > <svg width="3em" height="2em" viewBox="0 0 16 16" class="bi bi-door-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <!-- <a  href="/login" style="color: black;" > <svg width="3em" height="2em" viewBox="0 0 16 16" class="bi bi-door-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2v13h1V2.5a.5.5 0 0 0-.5-.5H11zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
-                  </svg></a> 
+                  </svg></a>  -->
                 <a href="#"" style="color: black;">
                 <svg width="3em" height="2em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
@@ -278,7 +284,7 @@
 
 </html>
 
-<!-- Golocation API -->
+<!-- Geolocation API -->
 <script src="http://code.jquery.com/jquery-2.2.4.min.js"> </script>
 <script>
     function getLocation(){
