--- a/templates/login.html
+++ b/templates/login.html
@@ -18,5 +18,38 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
+      <p style="padding-top:15px ;">Or</p>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter">
+  Login with OTP on phone number
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Login with an OTP</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+
+          <label>Phone Number</label>
+          <label for="inputphone" class="sr-only">Phone</label>
+          <input style=" margin-right: 20px;" type="tel" name="phone" id="inputphone" class="form-control" placeholder="Enter your phone number" required="">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success">Generate an OTP</button>
+      </div>
+    </div>
+  </div>
 </div>
+</div>
+
+
 {% endblock body %}
